<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#07090D"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jetbrains_mono"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/score"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415" />

    <Button
        android:id="@+id/score"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="340dp"
        android:background="@drawable/circle_button"
        android:fontFamily="@font/jetbrains_mono"
        android:onClick="moveToEasterEggActivity"
        android:text="@string/loading"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:orientation="horizontal"
            android:paddingStart="20sp"
            android:paddingEnd="20sp">

            <TextView
                android:id="@+id/textValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/jetbrains_mono"
                android:text="@string/value"
                android:textAlignment="viewStart"
                android:textColor="#AFAFAF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/jetbrains_mono"
                android:text="@string/loading"
                android:textAlignment="viewEnd"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:orientation="horizontal"
            android:paddingStart="20sp"
            android:paddingEnd="20sp">

            <TextView
                android:id="@+id/textClassification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/jetbrains_mono"
                android:text="@string/classification"
                android:textAlignment="viewStart"
                android:textColor="#AFAFAF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/classification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/jetbrains_mono"
                android:text="@string/loading"
                android:textAlignment="viewEnd"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:orientation="horizontal"
            android:paddingStart="20sp"
            android:paddingEnd="20sp">

            <TextView
                android:id="@+id/textTimestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/jetbrains_mono"
                android:text="@string/timestamp"
                android:textAlignment="viewStart"
                android:textColor="#AFAFAF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/jetbrains_mono"
                android:text="@string/loading"
                android:textAlignment="viewEnd"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:orientation="horizontal"
            android:paddingStart="20sp"
            android:paddingEnd="20sp">

            <TextView
                android:id="@+id/textNextUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/jetbrains_mono"
                android:text="@string/next_update"
                android:textAlignment="viewStart"
                android:textColor="#AFAFAF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nextUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/jetbrains_mono"
                android:text="@string/loading"
                android:textAlignment="viewEnd"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>